add file dialog for library functionality search bar setup list for all tracks setup

--- a/src/app/playback-page/playback-page.component.html
+++ b/src/app/playback-page/playback-page.component.html
@@ -5,5 +5,12 @@
     </div>
     <div class="row-span-4 border border-black"></div>
   </div>
-  <div class="col-span-2 border border-black"></div>
+  <div class="col-span-2 grid grid-rows-[1fr_14fr] border border-black">
+    <div class="border border-black">
+      <app-library-search></app-library-search>
+    </div>
+    <div class="border border-black">
+      <app-library-list class="block m-2"></app-library-list>
+    </div>
+  </div>
 </div>
