add menu for opening library management

--- a/src/app/playback-page/playback-page.component.html
+++ b/src/app/playback-page/playback-page.component.html
@@ -6,8 +6,9 @@
     <div class="row-span-4 border border-black"></div>
   </div>
   <div class="col-span-2 grid grid-rows-[1fr_14fr] border border-black">
-    <div class="border border-black">
-      <app-library-search></app-library-search>
+    <div class="border border-black flex items-center gap-0.5">
+      <app-library-search class="flex-1"></app-library-search>
+      <app-pop-up-menu class="flex-none mr-2"></app-pop-up-menu>
     </div>
     <div class="border border-black">
       <app-library-list class="block m-2"></app-library-list>
