library management page layout added

--- a/src/app/library-list/library-list.component.html
+++ b/src/app/library-list/library-list.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full overflow-auto">
+<div class="w-full h-full overflow-auto px-2 py-2 space-x-2">
   <table class="w-full table-auto border-collapse border border-black">
     <thead class="bg-gray-200 border-b border-black">
       <tr>
