--- a/src/app/library-path-configurator/library-path-configurator.component.html
+++ b/src/app/library-path-configurator/library-path-configurator.component.html
@@ -1,6 +1,14 @@
 <div class="flex flex-row items-center w-full h-full px-2 py-2 space-x-2">
-  <input readonly type="text" placeholder="Folder..." class="flex-1 border border-black rounded px-2 py-1" />
-  <button class="flex-none bg-gray-200 hover:bg-gray-300 rounded px-3 py-1 ml-2" title="Settings">
+  <label for="library-path">Library root</label>
+  <input
+    id="library-path"
+    name="library-path"
+    readonly
+    type="text"
+    placeholder="Path..."
+    class="flex-1 border border-black rounded px-2 py-1"
+  />
+  <button class="bg-gray-200 hover:bg-gray-300 rounded px-3 py-1 ml-2" title="Settings">
     <fa-icon icon="folder" class="fa-fw"></fa-icon>
   </button>
 </div>
