--- a/src/app/library-path-configurator/library-path-configurator.component.html
+++ b/src/app/library-path-configurator/library-path-configurator.component.html
@@ -10,7 +10,7 @@
       class="flex-1 border border-black rounded px-2 py-1"
     />
     <button class="bg-gray-200 hover:bg-gray-300 rounded px-3 py-1 ml-2" title="Select folder">
-      <fa-icon icon="folder" class="fa-fw"></fa-icon>
+      <fa-icon [icon]="folderIcon" class="fa-fw"></fa-icon>
     </button>
   </div>
 </div>
