--- a/src/app/library-manage-page/library-manage-page.component.html
+++ b/src/app/library-manage-page/library-manage-page.component.html
@@ -1,6 +1,6 @@
 <div class="fixed top-4 left-4 z-50">
   <button class="bg-white hover:bg-gray-300 text-black rounded px-3 py-1" title="Go back" (click)="backToPlayback()">
-    <fa-icon icon="arrow-left" class="fa-fw"></fa-icon>
+    <fa-icon [icon]="arrowLeftIcon" class="fa-fw"></fa-icon>
   </button>
 </div>
 
@@ -20,6 +20,8 @@
   <app-library-import-folder></app-library-import-folder>
 
   <div class="flex items-center my-4">
+    <div class="flex-grow border-t border-gray-300"></div>
+    <span class="mx-4 text-gray-500">import results</span>
     <div class="flex-grow border-t border-gray-300"></div>
   </div>
   <app-library-import-results></app-library-import-results>
