--- a/src/app/category-tree/category-tree-node/category-tree-node.component.html
+++ b/src/app/category-tree/category-tree-node/category-tree-node.component.html
@@ -1,7 +1,7 @@
 <div class="border-l pl-4 my-2">
   <div class="flex items-center space-x-2">
     <input type="text" [(ngModel)]="category.name" class="border px-2 py-1 rounded w-60" />
-    <button class="bg-gray-200 hover:bg-gray-300 px-2 py-1 rounded" (click)="removeCategory()">Remove</button>
+    <button class="bg-gray-200 hover:bg-gray-300 px-2 py-1 rounded" (click)="removeSubcategory()">Remove</button>
   </div>
 
   <div class="flex items-center space-x-2 mt-2">
