--- a/src/app/pop-up-menu/pop-up-menu.component.html
+++ b/src/app/pop-up-menu/pop-up-menu.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="flex items-center px-2 py-2 hover:bg-gray-300 cursor-pointer" (click)="openManageDances()">
         <fa-icon [icon]="peopleArrowsIcon" class="mr-2"></fa-icon>
-        Manage Categories
+        Manage Dances
       </div>
       <div class="flex items-center px-2 py-2 hover:bg-gray-300 cursor-pointer" (click)="openManageCategories()">
         <fa-icon [icon]="listIcon" class="mr-2"></fa-icon>
