restructured category data to accommodate dance management better

--- a/src/app/category-manage-page/category-tree/category-tree.component.html
+++ b/src/app/category-manage-page/category-tree/category-tree.component.html
@@ -1,6 +1,6 @@
 @if (!categoryStore.isLoading()) {
   <app-category-tree-node
-    [category]="categoryStore.rootCategory()!"
+    [category]="categoryStore.rootCategoryNode()!"
     (onAdd)="addCategory($event)"
     (onRemove)="removeCategory($event)"
   ></app-category-tree-node>
