synonym management complete

--- a/src/app/dance-manage-page/dance-list/dance-list.component.html
+++ b/src/app/dance-manage-page/dance-list/dance-list.component.html
@@ -63,7 +63,7 @@
               <button
                 class="bg-gray-200 hover:bg-gray-300 rounded px-2 py-1"
                 title="Add Synonym"
-                (click)="addSynonym(dance.id, newSynonymInput.value)"
+                (click)="addSynonym(dance.id, newSynonymInput)"
               >
                 <fa-icon [icon]="plusIcon" class="fa-fw"></fa-icon>
               </button>
