Ui components organized in pages with subcomponents

--- a/src/app/track-playback-page/track-playback-page.component.html
+++ b/src/app/track-playback-page/track-playback-page.component.html
@@ -7,11 +7,11 @@
   </div>
   <div class="col-span-2 grid grid-rows-[1fr_14fr] border border-black">
     <div class="border border-black flex items-center gap-0.5">
-      <app-library-search class="flex-1"></app-library-search>
+      <app-track-search class="flex-1"></app-track-search>
       <app-pop-up-menu class="flex-none mr-2"></app-pop-up-menu>
     </div>
     <div class="border border-black">
-      <app-library-list class="block m-2"></app-library-list>
+      <app-track-list class="block m-2"></app-track-list>
     </div>
   </div>
 </div>
