--- a/src/app/dance-manage-page/dance-manage-page.component.html
+++ b/src/app/dance-manage-page/dance-manage-page.component.html
@@ -1,8 +1,4 @@
-<div class="fixed top-4 left-4 z-50">
-  <button class="bg-white hover:bg-gray-300 text-black rounded px-3 py-1" title="Go back" (click)="backToPlayback()">
-    <fa-icon [icon]="arrowLeftIcon" class="fa-fw"></fa-icon>
-  </button>
-</div>
+<app-back-to-track-playback-button class="fixed top-4 left-4 z-50"></app-back-to-track-playback-button>
 
 <div class="px-[10%]">
   <div class="flex items-center my-4">
