--- a/src/app/library-manage-page/library-import-folder/library-import-folder.component.html
+++ b/src/app/library-manage-page/library-import-folder/library-import-folder.component.html
@@ -1,15 +1,22 @@
-<div class="flex flex-col w-full h-full px-2 py-2 space-y-4">
+<form
+  #folderImportForm
+  id="folder-import-form"
+  name="folder-import-form"
+  class="flex flex-col w-full h-full px-2 py-2 space-y-4"
+>
   <div class="flex flex-row items-center w-full space-x-2">
     <label for="library-path" class="whitespace-nowrap w-40">Folder to import</label>
     <input
       id="library-path"
       name="library-path"
+      form="folder-import-form"
       readonly
       type="text"
       placeholder="Path..."
       class="flex-1 border border-black rounded px-2 py-1"
+      [value]="directoryPath()"
     />
-    <button class="bg-gray-200 hover:bg-gray-300 rounded px-3 py-1" title="Select folder">
+    <button class="bg-gray-200 hover:bg-gray-300 rounded px-3 py-1" title="Select folder" (click)="pickFolder()">
       <fa-icon [icon]="folderOpenIcon" class="fa-fw"></fa-icon>
     </button>
   </div>
@@ -19,16 +26,29 @@
     <input
       type="text"
       id="file-pattern"
+      form="folder-import-form"
       name="file-pattern"
-      value="{dance} - {artist} - {title}"
       placeholder="Input a pattern"
       class="flex-1 border border-black rounded px-2 py-1"
+      [(ngModel)]="filePattern"
     />
     <label for="read-metadata" class="whitespace-nowrap w-40">Read file metadata</label>
-    <input type="checkbox" id="read-metadata" name="read-metadata" checked class="mr-2" />
+    <input
+      type="checkbox"
+      id="read-metadata"
+      name="read-metadata"
+      form="folder-import-form"
+      class="mr-2"
+      [(ngModel)]="readMetadata"
+    />
   </div>
 
   <div class="flex flex-row items-center justify-center w-full">
-    <button class="bg-gray-200 hover:bg-gray-300 rounded px-3 py-1">Import</button>
+    <button class="bg-gray-200 hover:bg-gray-300 rounded px-3 py-1" (click)="startImportAndReset()">Import</button>
   </div>
-</div>
+</form>
+
+<app-library-import-progress
+  [started]="importService.started()"
+  [progress]="importService.progress()"
+></app-library-import-progress>
